--- a/app/src/main/res/layout/activity_profile_display.xml
+++ b/app/src/main/res/layout/activity_profile_display.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#00FFFFFF"
     tools:context="arwith.myplayerhub.ProfileDisplay">
 
     <SearchView
         android:id="@+id/SearchBox"
-        android:queryHint="Search..."
         android:layout_width="368dp"
         android:layout_height="50dp"
         android:layout_marginStart="8dp"
@@ -16,9 +16,12 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:background="#008F8F8F"
+        android:queryHint="Search..."
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/Username"
@@ -41,7 +44,7 @@
     <ScrollView
         android:id="@+id/ScrollView"
         android:layout_width="368dp"
-        android:layout_height="515dp"
+        android:layout_height="466dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
@@ -50,12 +53,90 @@
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Username">
+        app:layout_constraintTop_toBottomOf="@+id/Username"
+        app:layout_constraintVertical_bias="0.0">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" />
     </ScrollView>
+
+    <Button
+        android:id="@+id/addCard"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="7dp"
+        android:layout_marginRight="7dp"
+        android:layout_marginBottom="9dp"
+        android:text="Add Card"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ScrollView" />
+
+    <Button
+        android:id="@+id/changeUsername"
+        android:layout_width="99dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="8dp"
+        android:text="Change Username"
+        android:textSize="10sp"
+        app:layout_constraintBottom_toTopOf="@+id/ScrollView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/SearchBox" />
+
+    <LinearLayout
+        android:id="@+id/popup"
+        android:layout_width="140dp"
+        android:layout_height="300dp"
+        android:layout_marginEnd="7dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/addCard"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:visibility="gone">
+
+        <ImageButton
+            android:id="@+id/bnetAdd"
+            android:layout_width="match_parent"
+            android:layout_height="60"
+            android:background="#081D30"
+            android:scaleType="center"
+            app:srcCompat="@mipmap/blizzard_background" />
+
+        <ImageButton
+            android:id="@+id/epicAdd"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:background="#00000000"
+            app:srcCompat="@mipmap/EpicGames_background" />
+
+        <ImageButton
+            android:id="@+id/originAdd"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:background="#00FFFFFF"
+            android:scaleType="center"
+            app:srcCompat="@mipmap/origin_background" />
+
+        <ImageButton
+            android:id="@+id/steamAdd"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:background="#00000000"
+            android:cropToPadding="false"
+            android:scaleType="center"
+            app:srcCompat="@mipmap/steam_background" />
+
+        <ImageButton
+            android:id="@+id/closePopup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
+    </LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
