--- a/app/src/main/res/layout/activity_change_username.xml
+++ b/app/src/main/res/layout/activity_change_username.xml
@@ -17,8 +17,8 @@
         android:layout_marginRight="84dp"
         android:layout_marginBottom="297dp"
         android:ems="10"
+        android:hint="Enter New Username"
         android:inputType="textPersonName"
-        android:text="Enter New Username"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
