--- a/app/src/main/res/layout/activity_profile_display.xml
+++ b/app/src/main/res/layout/activity_profile_display.xml
@@ -203,4 +203,15 @@
         app:layout_constraintTop_toBottomOf="@+id/ScrollView"
         app:layout_constraintVertical_bias="0.0" />
 
+    <Button
+        android:id="@+id/signOutBtn"
+        android:layout_width="50dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:background="#92EE5353"
+        android:text="Sign Out"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ScrollView" />
+
 </android.support.constraint.ConstraintLayout>
