--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -87,7 +87,7 @@
         android:layout_marginBottom="84dp"
         android:background="@android:color/holo_orange_dark"
         android:onClick="onClick"
-        android:text="Submit"
+        android:text="@string/common_signin_button_text"
         android:textColor="@android:color/white"
         android:textStyle="bold"
         android:typeface="normal"
@@ -111,4 +111,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Submit" />
+
+    <Button
+        android:id="@+id/forgotPassword"
+        android:layout_width="wrap_content"
+        android:layout_height="35dp"
+        android:background="#D5770A0A"
+        android:text="Forgot Password"
+        android:textColor="#000000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </android.support.constraint.ConstraintLayout>
