profile refresh button and player not found added

--- a/app/src/main/res/layout/activity_display_other.xml
+++ b/app/src/main/res/layout/activity_display_other.xml
@@ -27,8 +27,8 @@
 
     <ScrollView
         android:id="@+id/ScrollViewOther"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="345dp"
+        android:layout_height="519dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
@@ -37,8 +37,10 @@
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/UsernameOther">
+        app:layout_constraintTop_toBottomOf="@+id/UsernameOther"
+        app:layout_constraintVertical_bias="0.164">
 
         <LinearLayout
             android:id="@+id/cardListOther"
@@ -60,5 +62,35 @@
         app:layout_constraintEnd_toStartOf="@+id/UsernameOther"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/notFound"
+        android:layout_width="173dp"
+        android:layout_height="177dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/ScrollViewOther"
+        app:layout_constraintEnd_toEndOf="@+id/ScrollViewOther"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/ScrollViewOther"
+        app:srcCompat="@mipmap/notfound_background" />
+
+    <ImageButton
+        android:id="@+id/refresh2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ScrollViewOther"
+        app:srcCompat="@android:drawable/ic_popup_sync" />
 
 </android.support.constraint.ConstraintLayout>
