--- a/app/src/main/res/layout/activity_profile_display.xml
+++ b/app/src/main/res/layout/activity_profile_display.xml
@@ -225,4 +225,18 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <ImageButton
+        android:id="@+id/refresh"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="93dp"
+        android:layout_marginLeft="93dp"
+        android:layout_marginEnd="54dp"
+        android:layout_marginRight="54dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/addCard"
+        app:layout_constraintStart_toEndOf="@+id/signOutBtn"
+        app:srcCompat="@android:drawable/ic_popup_sync" />
+
 </android.support.constraint.ConstraintLayout>
