--- a/app/src/main/res/layout/activity_fnstat_display.xml
+++ b/app/src/main/res/layout/activity_fnstat_display.xml
@@ -572,4 +572,20 @@
         </TableLayout>
     </ScrollView>
 
+    <ImageView
+        android:id="@+id/notFoundFN"
+        android:layout_width="212dp"
+        android:layout_height="208dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@mipmap/notfound_background" />
+
 </android.support.constraint.ConstraintLayout>
