--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -14,8 +14,6 @@
         android:layout_marginLeft="77dp"
         android:layout_marginEnd="77dp"
         android:layout_marginRight="77dp"
-        android:layout_marginBottom="282dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -29,12 +27,10 @@
         android:layout_marginLeft="171dp"
         android:layout_marginEnd="171dp"
         android:layout_marginRight="171dp"
-        android:layout_marginBottom="263dp"
         android:text="Status"
         android:textColor="@android:color/holo_red_light"
         android:textStyle="bold"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
@@ -45,17 +41,16 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="84dp"
         android:layout_marginLeft="84dp"
-        android:layout_marginTop="15dp"
         android:layout_marginEnd="85dp"
         android:layout_marginRight="85dp"
-        android:layout_marginBottom="202dp"
+        android:layout_marginBottom="244dp"
         android:ems="10"
         android:hint="E-mail"
         android:inputType="textEmailAddress"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/LoginStatus" />
+        app:layout_constraintHorizontal_bias="0.458"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/Password"
@@ -66,11 +61,9 @@
         android:layout_marginTop="15dp"
         android:layout_marginEnd="85dp"
         android:layout_marginRight="85dp"
-        android:layout_marginBottom="141dp"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Email" />
@@ -84,14 +77,12 @@
         android:layout_marginTop="9dp"
         android:layout_marginEnd="149dp"
         android:layout_marginRight="149dp"
-        android:layout_marginBottom="84dp"
         android:background="@android:color/holo_orange_dark"
         android:onClick="onClick"
         android:text="@string/common_signin_button_text"
         android:textColor="@android:color/white"
         android:textStyle="bold"
         android:typeface="normal"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Password" />
@@ -104,20 +95,18 @@
         android:layout_marginLeft="129dp"
         android:layout_marginEnd="129dp"
         android:layout_marginRight="129dp"
-        android:layout_marginBottom="36dp"
         android:text="Create an Account"
         android:textSize="10sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Submit" />
 
     <Button
         android:id="@+id/forgotPassword"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="35dp"
         android:background="#D5770A0A"
-        android:text="Forgot Password"
+        android:text="Change Password"
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
