--- a/app/src/main/res/layout/activity_owstat_display.xml
+++ b/app/src/main/res/layout/activity_owstat_display.xml
@@ -321,4 +321,20 @@
         app:layout_constraintTop_toBottomOf="@+id/scrollView2"
         app:srcCompat="@mipmap/private_foreground" />
 
+    <ImageView
+        android:id="@+id/notFoundOW"
+        android:layout_width="235dp"
+        android:layout_height="235dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@mipmap/notfound_background" />
+
 </android.support.constraint.ConstraintLayout>
